--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,16 @@
     "start": "node ./app.js"
   },
   "dependencies": {
+    "async": "^1.5.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.3.4",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.2.8",
     "morgan": "~1.6.1",
+    "nconf": "^0.8.2",
     "serve-favicon": "~2.3.0"
   }
 }
