--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./app.js"
+    "prestart": "start/b mongod --dbpath data",
+    "start": "nodemon ./app.js"
   },
   "dependencies": {
     "async": "^1.5.0",
@@ -14,8 +15,8 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "mongoose": "^4.2.8",
-    "morgan": "~1.6.1",
+    "morgan": "^1.6.1",
     "nconf": "^0.8.2",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.3.0"
   }
 }
