--- a/client/bower.json
+++ b/client/bower.json
@@ -14,6 +14,7 @@
     "backbone": "~1.2.3",
     "backbone.validation": "backbone-validation#~0.11.5",
     "mediator-js": "~0.9.9",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37"
   }
 }
