--- a/client/bower.json
+++ b/client/bower.json
@@ -15,6 +15,8 @@
     "backbone.validation": "backbone-validation#~0.11.5",
     "mediator-js": "~0.9.9",
     "bootstrap": "~3.3.6",
-    "eonasdan-bootstrap-datetimepicker": "~4.17.37"
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37",
+    "js-cookie": "~2.0.4",
+    "blueimp-md5": "~1.1.1"
   }
 }
