--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.2.8",
     "morgan": "^1.6.1",
     "nconf": "^0.8.2",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "moment": "~2.10.6"
   }
 }
