--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,11 @@
     "ejs": "^2.3.4",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "moment": "~2.10.6",
     "mongoose": "^4.2.8",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.6.1",
     "nconf": "^0.8.2",
-    "serve-favicon": "^2.3.0",
-    "moment": "~2.10.6"
+    "serve-favicon": "^2.3.0"
   }
 }
