--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "prestart": "start/b mongod --dbpath data",
-    "start": "nodemon ./app.js"
+    "start": "node ./app.js"
   },
   "dependencies": {
     "async": "^1.5.0",
